# setup-environment-agustinhernando2

./: .gitignore  CMakeLists.txt  Doxyfile  sonar-project.properties
.github/actions/coverage_and_test/: action.yml
include/: logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
